feat: 添加mysql 配置

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -12,5 +12,5 @@
     <!-- 使用模板数据 -->
     <h1>{{ title }}</h1> 
     <!-- 使用模板数据 -->
-    <h2>欢迎来到egg</h2>
+    <h2>欢迎来到egg, 我是egg demo</h2>
 </body>
